# Cpp_Ecg_Detectors

./: CMakeLists.txt  README.md  main.cpp
handlers/: Convolution.cpp  Convolution.h  HelperInterface.h  MWA.cpp  MWA.h  MoveDifference.cpp  MoveDifference.h  PanPeakDetector.cpp  PanPeakDetector.h  VectorFunctions.cpp
realtime/: DetectorEngZeeRealTime.cpp  DetectorEngZeeRealTime.h  DetectorPanTompkins.cpp  DetectorPanTompkins.h  Detectors.h  RealTimeDetector.h
